--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1543,6 +1543,13 @@ body {
   color: rgba(0, 0, 0, 0.6);
 }
 
+.Starboard-storage-item{
+    display: flex;
+}
+.Starboard-storage-item .services-item-text{
+    max-width: 85%;
+}
+
 /* ==========================================================================
    Consolidated Media Queries (Unified Workflow)
    ========================================================================== */
