--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1567,6 +1567,7 @@ body {
 }
 .moreinfo p a {
   color: var(--Black);
+  text-decoration: underline;
 }
 /* ==========================================================================
    Consolidated Media Queries (Unified Workflow)
