--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2065,7 +2065,7 @@ body {
 
 .story-card {
   background-color: var(--Lightest-Gray---FA);
-  border: 1px solid var(--Lighter-Gray---EE);
+  border: 1px solid var(--Light-Gray---D9);
   border-radius: 8px;
   display: flex;
   align-items: center;
