--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,16 @@
 .text-blue {
   color: var(--Bllue);
 }
+.container-starboard {
+  max-width: 1520px;
+    width: 100%;
+    padding: 10px;
+}
+.container-starboard-2 {
+  max-width: 1250px;
+    width: 100%;
+    padding: 10px;
+}
 
 .section-title {
   color: var(--Teal);
@@ -133,9 +143,8 @@
   position: relative;
   display: block;
   width: 100%;
-  aspect-ratio: 1 / 1.2;
+  aspect-ratio: 1 / 1.25;
   overflow: hidden;
-  border-radius: 4px;
   transition: var(--transition);
 }
 
@@ -156,18 +165,19 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 50%;
   padding: 40px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  background: linear-gradient(
+  /* background: linear-gradient(
     to top,
     rgba(42, 75, 92, 0.9) 0%,
     rgba(42, 75, 92, 0.4) 30%,
     transparent 60%
-  );
+  ); */
+  background: linear-gradient(180deg, rgba(42, 75, 92, 0.00) 0%, rgba(42, 75, 92, 0.80) 100%);
   transition: var(--transition);
 }
 
@@ -210,10 +220,15 @@
   overflow: hidden;
 }
 
-.about-content {
+/* .about-content {
   max-width: 80%;
   margin: 0 auto;
   padding-right: 50px;
+} */
+
+.about-content {
+    max-width: 67%;
+    margin-left: 18%;
 }
 
 .about-title {
@@ -266,14 +281,15 @@
 /* Carousel Custom Nav */
 .testimonial-nav {
   position: absolute;
-  top: 50%;
+  top: 20%;
   left: 0;
-  width: 100%;
+  width: 90%;
   transform: translateY(-50%);
   display: flex;
   justify-content: space-between;
   pointer-events: none;
   z-index: 5;
+  margin: 0 5%;
 }
 
 .testimonial-prev,
@@ -309,9 +325,9 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  /* border: 1px solid rgba(255, 255, 255, 0.1); */
   transition: var(--transition);
-  height: 100%;
+  height: 120px;
 }
 
 .cta-icon {
@@ -321,7 +337,7 @@
 }
 
 .cta-icon img {
-  width: 100%;
+  width: 40px;
   height: 100%;
   object-fit: contain;
 }
@@ -391,11 +407,9 @@
   position: relative;
   display: flex;
   align-items: center;
-  border: 1px solid #eee;
-  padding: 2px;
   border-radius: 4px;
-  background: #fff;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.03);
+  border: 1px solid var(--Light-Gray---D9, #D9D9D9);
+  background: var(--White, #FFF);
   width: 320px;
 }
 
@@ -404,7 +418,7 @@
   padding: 12px 20px;
   border: none;
   outline: none;
-  font-size: 14px;
+  font-size: 16px;
   color: var(--Teal);
 }
 
@@ -535,7 +549,7 @@ p {
   border: none;
   border-radius: 4px;
   text-transform: capitalize;
-  letter-spacing: 1px;
+  /* letter-spacing: 1px; */
   transition: var(--transition);
   width: fit-content;
 }
@@ -555,7 +569,7 @@ p {
   border: 1px solid var(--Teal);
   border-radius: 4px;
   text-transform: capitalize;
-  letter-spacing: 1px;
+  /* letter-spacing: 1px; */
   transition: var(--transition);
   display: inline-block;
   /* display: flex;
@@ -624,9 +638,12 @@ body {
   z-index: 1000;
   background-color: var(--White);
   color: var(--Teal);
-  backdrop-filter: blur(10px);
   border-bottom: 4px solid var(--Teal);
   transition: var(--transition);
+}
+.header-cont{
+  max-width: 1680px;
+  margin: 0 auto;
 }
 
 .main-header.mega-active {
@@ -698,7 +715,6 @@ body {
 .contact-info .label {
   font-size: 16px;
   color: var(--Teal);
-  text-transform: uppercase;
   font-weight: 400;
 }
 
@@ -751,7 +767,7 @@ body {
 /* Mega Menu Styles */
 .mega-menu {
   position: absolute;
-  top: 82%;
+  top: 78%;
   left: 0;
   width: 100%;
   background: #ffffff;
@@ -775,14 +791,14 @@ body {
 }
 
 .mega-list li {
-  margin-bottom: 12px;
+  margin-bottom: 15px;
 }
 
 .mega-list a {
-  color: #333;
+  color: #111;
   text-decoration: none;
-  font-size: 15px;
-  font-weight: 500;
+  font-size: 16px;
+  font-weight: 400;
   transition: var(--transition);
 }
 
@@ -791,7 +807,7 @@ body {
   overflow: hidden;
   margin: 5px;
   cursor: pointer;
-  height: 320px;
+  height: 300px;
 }
 
 .boat-card img {
@@ -813,7 +829,8 @@ body {
   left: 0;
   width: 100%;
   padding: 20px;
-  background: linear-gradient(transparent, rgba(0, 0, 0, 0.8));
+  /* background: linear-gradient(transparent, rgba(0, 0, 0, 0.8)); */
+  background: linear-gradient(180deg, rgba(42, 75, 92, 0.00) 0%, rgba(42, 75, 92, 0.80) 100%);
   color: white;
   font-weight: 700;
 }
@@ -835,14 +852,9 @@ body {
 
 .brand-logos img {
   width: 100%;
-  max-width: 120px;
-  opacity: 0.9;
+  max-width: 160px;
   transition: var(--transition);
   cursor: pointer;
-}
-
-.brand-logos img:hover {
-  opacity: 1;
 }
 
 .hart-fabrication-section {
@@ -894,13 +906,13 @@ body {
 /* Sidebar Styles */
 .company-sidebar {
   position: fixed;
-  top: 0;
+  top: 70px;
   right: -500px;
   width: 500px;
   height: 100%;
   background: #ffffff;
   z-index: 2000;
-  padding: 70px 120px 70px 70px;
+  padding: 38px 120px 70px 70px;
   transition: var(--transition);
   color: #333;
 }
@@ -909,7 +921,7 @@ body {
   right: 0;
 }
 
-.sidebar-overlay {
+/* .sidebar-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -926,7 +938,7 @@ body {
 .sidebar-overlay.active {
   visibility: visible;
   opacity: 1;
-}
+} */
 
 .sidebar-header {
   background-color: var(--White);
@@ -952,7 +964,7 @@ body {
 .main-sidebar-nav {
   list-style: none;
   padding: 0;
-  margin-top: 50px;
+  margin-top: 10px;
 }
 
 .main-sidebar-nav li {
@@ -1083,7 +1095,7 @@ body {
   padding: 0 20px;
 }
 
-.hero-title {
+/* .hero-title {
   font-family: "Syncopate", sans-serif;
   font-size: clamp(2rem, 6vw, 2.5rem);
   font-weight: 700;
@@ -1092,12 +1104,13 @@ body {
   letter-spacing: clamp(10px, 3vw, 25px);
   margin: 0;
   line-height: 1.1;
-}
+} */
 
 .hero-actions-wrapper {
   position: relative;
   z-index: 10;
   width: 100%;
+  background: var(--Lightest-Gray---FA, #FAFAFA);
 }
 
 .hero-actions {
@@ -1106,15 +1119,36 @@ body {
   align-items: stretch;
   gap: 20px;
   max-width: 1100px;
-  margin: -40px auto 0;
+  margin: -25px auto 0;
   padding: 0 20px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 99999;
 }
 
 .action-buttons {
   display: flex;
   gap: 20px;
 }
-
+.action-buttons a {
+  width: 280px !important;
+  height: 48px;
+  padding: unset;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+}
+/* .hero-actions {
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+  gap: 20px;
+  max-width: 1100px;
+  margin: -25px auto 0;
+  padding: 0 20px;
+} */
 .hero-search {
   flex-grow: 1;
   max-width: 280px;
@@ -1122,19 +1156,22 @@ body {
   position: relative;
   background: var(--White);
   border-radius: 4px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   border: 1px solid var(--Light-Gray---D9);
   overflow: hidden;
 }
-
+.hero-search i {
+  color: rgb(4 119 166 / 60%);
+}
 .hero-search input {
   width: 100%;
-  padding: 15px 25px;
+  padding: 10px 25px;
+  display: flex;
+  align-items: center;
   border: none;
   background: transparent;
   color: var(--Teal);
-  font-size: 14px;
-  font-weight: 500;
+  font-size: 16px;
+  font-weight: 400;
   outline: none;
 }
 
@@ -1153,8 +1190,8 @@ body {
 }
 
 .hero-brands-bar {
-  background: var(--White);
-  padding: 50px 0;
+  background: var(--Lightest-Gray---FA, #FAFAFA);
+  padding: 60px 0px 30px 0;
 }
 .hero-brands-bar .hero-brand-logos {
   gap: 80px;
@@ -1166,7 +1203,7 @@ body {
 .hero-brands-bar img {
   max-height: 80px;
   width: auto;
-  max-width: 250px;
+  max-width: 200px;
   object-fit: contain;
   opacity: 1;
   transition: var(--transition);
@@ -1230,7 +1267,7 @@ body {
 /* Mobile Responsive */
 
 /* Hero Banner Styles */
-.hero-banner {
+/*.hero-banner {
   position: relative;
   width: 100%;
   height: 75vh;
@@ -1298,11 +1335,11 @@ body {
   align-items: stretch;
   gap: 20px;
   max-width: 1100px;
-  margin: -40px auto 0;
+  margin: -25px auto 0;
   padding: 0 20px;
 }
 
-.action-buttons {
+ .action-buttons {
   display: flex;
   gap: 20px;
 }
@@ -1317,7 +1354,7 @@ body {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   border: 1px solid var(--Light-Gray---D9);
   overflow: hidden;
-}
+} 
 
 .hero-search input {
   width: 100%;
@@ -1363,7 +1400,7 @@ body {
   opacity: 1;
   transition: var(--transition);
 }
-
+*/
 /* @keyframes fadeInUp {
     from {
         opacity: 0;
@@ -1418,7 +1455,7 @@ body {
 
 .hero-title {
   font-family: "Syncopate", sans-serif;
-  font-size: 55px;
+  font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 12px;
@@ -1570,6 +1607,19 @@ body {
   .hero-actions {
     max-width: 95%;
   }
+  .nav-links a {
+    font-size: 16px;
+    letter-spacing: 0px;
+  }
+  .company-toggle span {
+    font-size: 16px;
+  }
+  .contact-info .phone-link {
+    font-size: 16px;
+  }
+  .nav-links {
+    gap: 30px;
+}
 }
 
 /* Small Desktops & Tablets */
@@ -1586,6 +1636,7 @@ body {
     max-width: 100%;
     text-align: center;
     padding-right: 0px;
+    margin-left: 0;
   }
   .about-title {
     font-size: 20px;
@@ -1686,6 +1737,14 @@ body {
     align-items: center;
     margin-top: -100px;
   }
+  .hero-actions {
+    max-width: 100%;
+    width: 100%;
+    position: unset;
+    transform: unset;
+    margin: 10px;
+    gap: 10px;
+  }
   .action-buttons {
     width: 100%;
     flex-direction: column;
@@ -1698,7 +1757,14 @@ body {
   .hero-search {
     max-width: 100%;
     width: 100%;
-  }
+  height: unset;
+  /* padding: 10px 20px; */
+}
+.action-buttons a {
+width: 100% !important;
+height: unset;
+padding: 10px 20px !important;
+}
   .hero-brands-bar {
     padding: 40px 0;
   }
@@ -1707,7 +1773,7 @@ body {
     gap: 40px;
   }
   .common-hero .hero-title {
-    font-size: 40px;
+    font-size: 35px;
     letter-spacing: 8px;
   }
   .services-item-title {
@@ -1761,7 +1827,7 @@ body {
     min-height: 400px;
   }
   .common-hero .hero-title {
-    font-size: 28px;
+    font-size: 22px;
     letter-spacing: 4px;
   }
   .hero-cta-btn {
@@ -1776,6 +1842,7 @@ body {
   .service-intro-content p {
     font-size: 16px;
   }
+
 }
 
 /* ==========================================================================
@@ -2098,6 +2165,10 @@ body {
   color: var(--Teal);
   text-align: center;
 }
+.story-year.range span{
+  font-size: 24px;
+  font-weight: 700;
+}
 
 .story-divider {
   width: 1px;
@@ -2247,5 +2318,8 @@ body {
   .request-form-input {
     padding: 10px !important;
     font-size: 14px;
+  }
+  .contact-info {
+    display: none !important;
   }
 }
